--- a/layout/css/screen.css
+++ b/layout/css/screen.css
@@ -17,7 +17,7 @@ div#wrapper {
 	margin: 0 auto -80px;
 }
 
-div#contentbox, div#header h1 {
+div#contentbox, div#header div#logo {
     width: 640px;
     margin: 0 auto;
 }
@@ -42,17 +42,24 @@ div#header {
     height: 83px;
 }
 
-div#header h1 {
+div#header div#logo {
     height: 75px;
     background: url('../images/headertext.png') no-repeat bottom left;
+	position: relative;
 }
 
-div#header h1 span {
+div#header h1 {
     font-family: KaffeesatzLight,sans-serif;
     color: #84B465;
     font-size: 2em;
     padding-top: 1em;
     display: none;
+}
+
+div#header .login {
+	position: absolute;
+	right: 1em;
+	top: 1em;
 }
 
 ul#menu {
@@ -80,9 +87,10 @@ ul#menu li a {
     height: 32px;
     margin: 0 16px 18px 16px;
     padding: 12px 12px 13px 50px;
-    letter-spacing: 0.0005em;
+    /*letter-spacing: 0.0005em;*/
     background-position: 12px 12px;
     background-repeat: no-repeat;
+    list-style-type: none;
 }
 
 ul#menu li.chosen {
@@ -121,27 +129,56 @@ div#footer ul li {
     display: inline;
 }
 
+
+
 ul#timeline {
     padding: 0;
-    margin: 0 auto;
     text-align: center;
-    border-bottom: thin dotted #84b465;
+    list-style: none;
+    clear: both;
 }
 
 ul#timeline li {
-    display: inline;
-    font-size: small;
-    padding: 0 1ex;
+    text-align: center;
+    list-style: none;
+    float: left; /* FIXME bei weniger als 7 nicht zentriert, aber passt..? */
+    font-size: 9pt;
+    width: 71px;
+    height: 20px;
+    padding: 0;
+}
+
+ul#timeline li.disabled {
+    color: #cecece;
 }
 
 ul#timeline li a {
     color: #8f8f8f;
 }
 
-ul#timeline li a:hover {
-    color: #808080;
+ul#timeline li.selected a {
+    color: #ffffff;
+    background-color: #84b465;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border: thin solid #84b465;
+    padding: 4px;
+}
+
+ul#timeline li.prev {
     font-weight: bold;
-    text-decoration: none;
+    text-align: right;
+}
+
+ul#timeline li.next {
+    font-weight: bold;
+    text-align: left;
+}
+
+hr.clear {
+    clear: both;
+    visibility: hidden;
 }
 
 /***********************/
